# server/api/auth/local.js
@@ -1,34 +1,26 @@
 const passport = require('passport');
 const LocalStrategy = require('passport-local').Strategy;
-const { User } = require('../../api/models');
+const { Client } = require('../../api/models');
 
-passport.use(new LocalStrategy((async (username, password, done) => {
-  const user = await User
-    .query()
-    .where('username', '=', username)
-    .first();
-
-  if (!user) {
-    done(null, false, { message: 'User not found' });
+passport.use(new LocalStrategy({
+    usernameField: 'email',
+    passwordField: 'password',
+    session: false,
+    passReqToCallback: true,
+  },
+  async function (req, username, password, done) {
+    /**
+     * All of the heavy lifting is going to be done by the OAuth2 server.
+     * Our auth server has a password grant flow implemented that will
+     * validate that the credentials belong to a user, and the password is legit.
+     * From there we will validate the client is trusted, and give these trusted
+     * clients full access within the scope of the user. The only clients
+     * that are considered trusted are clients that we have implemented.
+     */
+    req.body.grant_type = 'password';
+    req.body.username = username;
+    req.body.scope = '*';
+    const client = await Client.query().where('client_id', '=', process.env.APP_CLIENT_ID).first();
+    return done(null, client);
   }
-
-  const hasValidPassword = await user.hasValidPassword(password);
-  if (!hasValidPassword) {
-    done(null, false, { message: 'Invalid username or password' });
-  }
-
-  done(null, user);
-})));
-
-
-passport.serializeUser((user, done) => {
-  done(null, user.id);
-});
-
-passport.deserializeUser((id, done) => {
-  User.query()
-    .findById(id)
-    .then(user => done(null, user))
-    .catch(done);
-});
-
+));
